Update .gitignore para excluir configurações de editores e arquivos temporários
Adicionei regras para ignorar arquivos de configuração de vários editores (Sublime, VSCode, IntelliJ), arquivos de cache do sistema, arquivos de log, diretórios de build, arquivos temporários e arquivos de bloqueio de dependências. Isso ajuda a manter o repositório limpo e evita o commit de arquivos desnecessários.

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,29 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Arquivos de configuração do editor
+*.sublime-workspace
+*.sublime-project
+.idea/
+.vscode/
+
+# Arquivos de cache do sistema
+.DS_Store
+Thumbs.db
+
+# Arquivos de log
+*.log
+
+# Diretórios de build
+dist/
+build/
+out/
+
+# Arquivos temporários
+*.tmp
+*.temp
+
+# Arquivos de dependências
+package-lock.json
+yarn.lock
