--- a/google-books-api/package.json
+++ b/google-books-api/package.json
@@ -7,13 +7,18 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "@react-aria/button": "^3.10.1",
+    "@react-aria/label": "^3.7.12",
+    "@react-aria/tabs": "^3.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.11",
     "google-books-api": "file:",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
+    "react-a11y": "^1.1.0",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "recharts": "^2.13.3",
